--- a/system/views/argument/sittingPage.html
+++ b/system/views/argument/sittingPage.html
@@ -155,8 +155,8 @@
 									<div class="tab-pane" id="tester">
 										<p>I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. So when you get something that has the name Kanye West on it, it’s supposed to be pushing the furthest possibilities. I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus.</p>
 									<div class="col-md-8 col-md-offset-2">
-							                <button class="btn btn-primary">安排活動學生進聊天室</button>
-                                        </div>
+							                <button class="btn btn-primary" onclick="javascript:location.href='./SendTesterToChatroom'">安排活動學生進聊天室</button>
+                                    </div>
                                     </div>
                                     <div class="tab-pane" id="topic">
 										<p>I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. So when you get something that has the name Kanye West on it, it’s supposed to be pushing the furthest possibilities. I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus.</p>
