--- a/system/views/argument/SendTesterToChatroom.html
+++ b/system/views/argument/SendTesterToChatroom.html
@@ -278,7 +278,7 @@
 	            function(data,status){                
 	            	console.log(data);
 	            	alert('done.');
-	            	//location.href='./sittingPage';
+	            	location.href='./sittingPage';
 	            }
 	        );
     	}
