Build request testing

--- a/system/views/argument/newactivity.html
+++ b/system/views/argument/newactivity.html
@@ -206,7 +206,7 @@
     <script>
     Gettopic();
     function Gettopic(){
-        $.post("./TopicShow",{
+        $.get("./Topic",{
                 'host_id':<%=host_id%>            
             },
             function(data,status){                
