--- a/system/views/argument/ChatroomPage.html
+++ b/system/views/argument/ChatroomPage.html
@@ -74,12 +74,12 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="./signup">
-                            <i class="material-icons">person_add</i> Sign up
+                            <i class="material-icons">person_add</i> 註冊
                         </a><!--https://material.io/icons/-->
                     </li>
                     <li>
                         <a href="./login">
-                            <i class="material-icons">chat</i> Enter activity
+                            <i class="material-icons">chat</i> 進入活動
                         </a>
                     </li>
                     <li>
@@ -93,7 +93,7 @@
                         </a>
                     </li>
                     <li>
-                        <a rel="tooltip" title="Sitting" data-placement="bottom" href="./sitting_login" class="btn btn-white btn-simple btn-just-icon">
+                        <a rel="tooltip" title="Setting" data-placement="bottom" href="./sitting_login" class="btn btn-white btn-simple btn-just-icon">
                             <i class="fa fa-cog"></i>
                         </a>
                     </li>
