--- a/system/views/argument/newTester.html
+++ b/system/views/argument/newTester.html
@@ -78,7 +78,7 @@
 					    </a>
 				    </li>
 				    <li>
-					    <a rel="tooltip" title="Sitting" data-placement="bottom" href="./sitting_login" class="btn btn-white btn-simple btn-just-icon">
+					    <a rel="tooltip" title="Setting" data-placement="bottom" href="./sitting_login" class="btn btn-white btn-simple btn-just-icon">
 						    <i class="fa fa-cog"></i>
 					    </a>
 				    </li>
