--- a/system/views/Demo.html
+++ b/system/views/Demo.html
@@ -72,7 +72,7 @@
 					    </a>
 				    </li>
 				    <li>
-					    <a rel="tooltip" title="Sitting" data-placement="bottom" href="#" target="_blank" class="btn btn-white btn-simple btn-just-icon">
+					    <a rel="tooltip" title="Setting" data-placement="bottom" href="#" target="_blank" class="btn btn-white btn-simple btn-just-icon">
 						    <i class="fa fa-cog"></i>
 					    </a>
 				    </li>
