--- a/system/views/argument/ChatroomPage.html
+++ b/system/views/argument/ChatroomPage.html
@@ -225,7 +225,7 @@
 
 <script>
 function SendActionToSql(Sentcontent,ad){
-    $.post("http://140.115.126.216:3000/argument_post_action_list",
+    $.post("http://140.115.126.216:3000/action_list",
         {
             ad_id:ad,
             t_id:<%=t_id%>,
