--- a/system/views/argument/ChatroomPage2.html
+++ b/system/views/argument/ChatroomPage2.html
@@ -254,7 +254,7 @@ socket.on(room_ID + '_upload_message', function(msg) {
 </script>
 <script>
 function SendActionToSql(Sentcontent, ad) {
-    $.post("http://140.115.126.216:3000/argument_post_action_list", {
+    $.post("http://140.115.126.216:3000/action_list", {
             ad_id: ad,
             t_id: <%=t_id%>,
             content: Sentcontent
