--- a/system/views/argument/newactivity.html
+++ b/system/views/argument/newactivity.html
@@ -102,7 +102,7 @@
 		<div class="section section-basic">
             
 	    	<div class="container">
-                <form action="./newactivity" method="post">
+                <form action="./activity" method="post">
                         <div class="title">
 	                        <h2>新增活動</h2>
 	                    </div>
