--- a/system/views/argument/signup.html
+++ b/system/views/argument/signup.html
@@ -102,7 +102,7 @@
 		<div class="section section-basic">
             
 	    	<div class="container">
-                <form action="./newuser" method="post">
+                <form action="./user" method="post">
                         <div class="title">
 	                        <h2>填寫註冊資料</h2>
 	                    </div>
