--- a/system/views/argument/ChatroomPage2.html
+++ b/system/views/argument/ChatroomPage2.html
@@ -292,7 +292,7 @@ $().ready(function() {
 </script>
 <script>
 function GetReferences(keywords) {
-    $.get("./ReferencesShow?keywords=" + keywords,
+    $.get("./References?keywords=" + keywords,
         function(data, status) {
             References_list = JSON.parse(data);
             console.log(References_list['text']);
