--- a/system/views/argument/ChatroomPage2.html
+++ b/system/views/argument/ChatroomPage2.html
@@ -403,7 +403,7 @@ $(function() {
                 $("#new-close-button").remove();
                 $("#sub_windows").dialog("close");
             });
-            $(this).append('<div id="sub_windows_contain">please select sub-windows mode</div>');
+            $(this).append('<div id="sub_windows_contain">請從上列選單中選擇一種子視窗模式，點擊後即刷新子視窗。</div>');
 
         },
         close: function(event, ui) {
